--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <div class="row justify-content-center">
             <div class="col-10 col-md-5 collapse" id="usersGroup">
-                <p class="lead">&star;<span class="font-weight-bold"> Giusy</span>  (23.89%) = <span class="font-weight-bold" id="giusy"></span> </p>
-                <p class="lead">&star;<span class="font-weight-bold"> Antonio</span> (24.52%) = <span class="font-weight-bold" id="antonio"></span> </p>
-                <p class="lead">&star;<span class="font-weight-bold"> Sara</span> (25.80%) = <span class="font-weight-bold" id="sara"></span> </p>
-                <p class="lead">&star;<span class="font-weight-bold"> Riccardo</span> (25.80%) = <span class="font-weight-bold" id="riccardo"></span> </p>
+                <p >&star; <span class="font-weight-bold lead"> Giusy</span>  (23.89%) = <span class="font-weight-bold lead" id="giusy"></span> </p>
+                <p>&star; <span class="font-weight-bold lead"> Antonio</span> (24.52%) = <span class="font-weight-bold lead" id="antonio"></span> </p>
+                <p>&star; <span class="font-weight-bold lead"> Sara</span> (25.80%) = <span class="font-weight-bold lead" id="sara"></span> </p>
+                <p>&star; <span class="font-weight-bold lead"> Riccardo</span> (25.80%) = <span class="font-weight-bold lead" id="riccardo"></span> </p>
             </div>
         </div>
     </div>
