Updated input step attribute

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <form id="formInput" method="post" class="row justify-content-center form-group">
             <div class="col-7 col-md-4 offset-md-1">
-                <input id="amountInput" class="form-control" type="number" placeholder="Importo trimestre">
+                <input id="amountInput" class="form-control" type="number" step="any" placeholder="Importo trimestre">
             </div>
             <div class="col-3 col-md-2">
                 <button id="calcBtn" class="btn btn-primary" type="submit">Calcola</button>
