--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
         <div class="row justify-content-center">
             <div class="col-10 col-md-5 collapse" id="usersGroup">
-                <p >&star; <span class="font-weight-bold lead"> Monica</span>  (23.89%) = <span class="font-weight-bold lead" id="monica"></span> </p>
+                <p >&star; <span class="font-weight-bold lead"> Elisabetta</span>  (23.89%) = <span class="font-weight-bold lead" id="elisabetta"></span> </p>
                 <p>&star; <span class="font-weight-bold lead"> Antonio</span> (24.52%) = <span class="font-weight-bold lead" id="antonio"></span> </p>
-                <p>&star; <span class="font-weight-bold lead"> Sara</span> (25.80%) = <span class="font-weight-bold lead" id="sara"></span> </p>
-                <p>&star; <span class="font-weight-bold lead"> Riccardo</span> (25.80%) = <span class="font-weight-bold lead" id="riccardo"></span> </p>
+                <p>&star; <span class="font-weight-bold lead"> Alice</span> (25.80%) = <span class="font-weight-bold lead" id="alice"></span> </p>
+                <p>&star; <span class="font-weight-bold lead"> Andrea</span> (25.80%) = <span class="font-weight-bold lead" id="andrea"></span> </p>
             </div>
         </div>
     </div>
@@ -54,7 +54,7 @@
                 if(quarterAmount < 5000 || quarterAmount > 6000 )
                     $("#warningMessage").show().delay( 4000 ).slideUp(500);
 
-                var users = ['monica', 'antonio', 'riccardo', 'sara'];
+                var users = ['elisabetta', 'antonio', 'andrea', 'alice'];
                 var percentages = [23.89, 24.52, 25.80, 25.80];
                 for(var i = 0; i < users.length; i++){
                     $("#"+users[i]).text( " € " + (((quarterAmount * percentages[i])/100)/3).toFixed(2) );
